# I2VGKCDM

./: Dockerfile  I2VGKCDM.ipynb  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  run.bash  run_generation.py  webapp.py
configs/: experiment-config.json
src/: generate.py  helpers.py  mlflow_utils.py  session.py
src/comet/: __init__.py  comet.py
src/pipelines/: custom_pipeline.py  pipeline_base.py
src/preprocess/: __init__.py
